--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -23,3 +23,11 @@ dist-ssr
 *.sln
 *.sw?
 .vercel
+
+#ignore env files
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+.env.production
