--- a/server/package.json
+++ b/server/package.json
@@ -9,6 +9,7 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "mongoose": "^8.7.0",
-    "web3": "^4.13.0"
+    "web3": "^4.13.0",
+    "web3-eth-accounts": "^4.2.1"
   }
 }
